WP 5.5 image alignment in editor fix

--- a/sass/editor_style.scss
+++ b/sass/editor_style.scss
@@ -154,7 +154,7 @@ th {
 /* Images */
 
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
 }
 .alignleft {
   float: left;
